--- a/CSS/0-helpers/_mixins.scss
+++ b/CSS/0-helpers/_mixins.scss
@@ -18,8 +18,7 @@
 
 @mixin anchor($color-1 : $cWhiteD-2, $color-2 : $cCamel-4) {
 
-  a:link,
-  a:visited {
+  &:any-link {
     position: relative;
     text-decoration: none;
     color: $color-1;
@@ -39,9 +38,10 @@
     }
   }
 
-  a:hover,
-  a:active,
-  a:focus {
+
+  &:hover,
+  &:active,
+  &:focus {
     outline: none;
     color: $color-2;
 
@@ -91,6 +91,10 @@
   }
 }
 
+
+
+// SHADOWS
+
 @mixin drop--shadow {
   filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
 }
@@ -106,4 +110,27 @@
 
 @mixin card--shadow--small {
   box-shadow: inset 0px 6px 10px 0px rgba(0, 0, 0, 1);
+}
+
+@mixin shadow--container($width: 400px, $height: 360px, $border-radius: 20px) {
+  @include card--shadow--medium;
+  background: $cSand-3;
+  width: $width;
+  height: $height;
+  border-radius: $border-radius;
+  position: absolute;
+  z-index: -2;
+}
+
+@mixin sticky--p($width: 400px, $height: 360px, $border-radius: 20px) {
+  box-sizing: border-box;
+  border-radius: $border-radius;
+  z-index: -1;
+  position: sticky;
+  width: $width;
+  height: $height;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
