--- a/CSS/2-base/_body.scss
+++ b/CSS/2-base/_body.scss
@@ -10,13 +10,20 @@ body {
   margin: 0;
   padding: 0;
   display: grid;
-  grid-template-rows: repeat(5, max-content);
+  grid-template-rows: repeat(6, max-content);
   grid-template-areas:
+
+    "phone--bar"
     "header"
     "top--nav"
     "main"
     "bottom--nav"
     "footer";
+
+  #phone--bar {
+    grid-area: phone--bar;
+  }
+
 
   header {
     grid-area: header;
@@ -43,14 +50,17 @@ body {
 main {
   max-width: 80vw;
 
-  h1 {
-    padding-top: 100px;
-  }
 }
 
-.gkg {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: $cCafe-5;
   font-family: forum;
+  font-weight: 1000;
 
   &::selection {
     color: $cEgg-1;
@@ -59,16 +69,32 @@ main {
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 8rem;
 }
 
 h2 {
-  font-size: 2.5rem;
+  font-size: 5rem;
+  padding-top: 2em;
+  text-align: center;
+
 }
 
 h3 {
-  font-size: 2.5rem;
+  font-size: 3.5rem;
 }
+
+h4 {
+  font-size: 2rem;
+}
+
+h5 {
+  font-size: 1.5rem;
+}
+
+h6 {
+  font-size: 1rem;
+}
+
 
 .egg--p {
   color: $cEgg-1;
