--- a/CSS/2-base/_nav.scss
+++ b/CSS/2-base/_nav.scss
@@ -3,24 +3,32 @@
 #top--nav {
   background: $cBlue linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
   position: sticky;
-  top: 0;
+  top: 51px;
   bottom: 0;
   box-shadow: 0px 5px 10px 0px;
   z-index: 2;
   height: 80px;
+
 }
 
 #main--nav {
-  @include anchor();
+  position: relative;
   display: flex;
   justify-content: space-between;
-  width: 90%;
+  width: 80%;
   margin: 0 auto;
+  height: 80px;
 
   .gkg {
-    font-size: 1.8em;
-    justify-self: center;
-    align-self: center;
+    position: relative;
+    font-size: 2.8em;
+    top: -1.6em;
+    margin: 0;
+
+    a {
+      @include anchor($cCafe-5, $cWhiteD-2);
+      padding: 0;
+    }
   }
 
   ul {
@@ -36,7 +44,22 @@
     margin: 0.6em;
 
     a {
-      font-size: 0.9em;
+      @include anchor();
+      font-size: 1em;
+    }
+
+    .buy {
+      font-size: 1.5em;
+      font-weight: 500;
+      font-style: italic;
+      position: relative;
+    }
+
+    .sell {
+      font-size: 1.5em;
+      font-weight: 500;
+      font-style: italic;
+      position: relative;
     }
   }
 }
@@ -49,23 +72,23 @@
   justify-self: flex-end;
   position: sticky;
   bottom: 0;
+  margin-bottom: -80px;
+
 }
 
-#nav--icons {
-  // @include svg--a(1rem, 2.5rem, $cCamel-4, $cWhiteD-2);
-  // display: flex;
-  // flex-direction: column;
-  // position: relative;
-  // top: 90px;
-  // z-index: 10;
-  // justify-content: flex-end;
-
-  @include svg--a(1rem 2rem, 2.5rem, $cCamel-4, $cWhiteD-2);
-  @include drop--shadow;
-  position: absolute;
-  flex-flow: column;
-  display: flex;
-  justify-self: flex-end;
+#contact--nav {
   position: sticky;
-  bottom: 14.5rem;
+  box-shadow: 0px 5px 10px 0px black;
+  top: 0;
+  z-index: 10;
+  color: $cCamel-4;
+  background: $cBlue linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+  font-size: 1em;
+  text-align: end;
+  padding: 1em;
+
+  a {
+    @include anchor();
+    margin-right: 2em;
+  }
 }
