--- a/CSS/2-base/_screens.scss
+++ b/CSS/2-base/_screens.scss
@@ -1,13 +1,25 @@
 @import "../0-helpers/_variables";
 
 section {
-  min-height: 640px;
-  max-height: fit-content;
+  height: fit-content;
+  position: relative;
 }
 
 .screen {
   display: grid;
   grid-template-columns: 10vw 80vw 10vw;
-  margin-bottom: 2rem;
+  margin-bottom: -100px;
   margin-top: -90px;
+
+  // &::after {
+  //   content: "";
+  //   position: absolute;
+  //   background: rgb(211, 42, 42);
+  //   width: 60px;
+  //   height: 60px;
+  //   left: 0px;
+  //   right: 0px;
+  //   margin: -1.5rem auto;
+  //   bottom: -1rem;
+  // }
 }
