--- a/CSS/2-base/_body.scss
+++ b/CSS/2-base/_body.scss
@@ -13,15 +13,15 @@ body {
   grid-template-rows: repeat(6, max-content);
   grid-template-areas:
 
-    "phone--bar"
+    "contact--nav"
     "header"
     "top--nav"
     "main"
     "bottom--nav"
     "footer";
 
-  #phone--bar {
-    grid-area: phone--bar;
+  #contact--nav {
+    grid-area: contact--nav;
   }
 
 
