--- a/CSS/main/main.css
+++ b/CSS/main/main.css
@@ -1144,6 +1144,19 @@ section {
   grid-gap: 1rem;
 }
 
+#why--us--section .why--us .why--us--box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 #why--us--section .why--us .why--us--box .why--us--box--h3 {
   font-size: 3rem;
   top: 0;
